--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>OIKONOMOS</title>
+    <title>INVITATION</title>
     <link href="css/style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/favicon.ico">
     
@@ -15,7 +15,7 @@
 
         <div class="wrap-mainTit">
             <h1 class="txt-mainTit type-fade">
-                <a href="../html/02.html">INVITATION</a>
+                <a href="../html/getmarried.html">INVITATION</a>
             </h1>
         </div>
       
