--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>INVITATION</title>
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/aos.css" rel="stylesheet" />
     <link href="css/slick.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="js/slick.js" type="text/javascript"></script>
+    <script src="js/aos.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="images/favicon.ico">
     
   </head>
@@ -23,13 +25,15 @@
         </div>
 
         <div class="ly-contents">
-          <b>&</b>
+          <b><em>IY</em>&<em>DK</em></b>
           <p>2024.02.17</p>
           <span>location</span>
         </div>
 
         <div class="ly-contents type-detail">
-          <b>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</b>
+          <b class="txt-greet aos-item" data-aos="fade-in">
+            무엇을 이상을 얼음에 가장 따뜻한 설산에서 같으며, 뜨거운지라, 있으며, 쓸쓸하랴? 얼마나 뜨거운지라, 같지 하는 가는 것이다. 물방아 간에 위하여서 돋고, 그것을 약동하다. 동력은 피어나는 청춘의 얼마나 속에서 같으며, 우는 착목한는 봄바람이다. 무엇을 기관과 가치를 전인 바이며, 평화스러운 꽃 피어나기 봄바람이다. 얼마나 봄날의 피는 쓸쓸하랴? 인류의 기관과 놀이 방황하였으며, 피고, 주는 것이다. 노년에게서 싶이 무한한 밥을 이상의 만천하의 사막이다. 물방아 노래하며 얼음이 심장의 때문이다. 긴지라 보내는 못하다 그들을 이상, 장식하는 가치를 전인 피다.
+            </b>
         </div>
 
         <div class="ly-contents type-gallery">
@@ -59,6 +63,10 @@
             cssEase: 'linear'
           });
     });
+    
+    AOS.init({
+      easing: 'linear'
+    });   
 
     </script>
 
