커밋하라고

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <div class="ly-all">
 
         <div class="ly-page01">
-            <h1 class="txt-mainTit type-fade">
+            <h1 class="txt-mainTit aos-item" data-aos="fade-in">
                 <a href="../html/getmarried.html">INVITATION</a>
             </h1>
         </div>
 
         <div class="ly-contents">
           <b><em>IY</em>&<em>DK</em></b>
-          <p>2024.02.17</p>
-          <span>location</span>
+          <p>2024.02.17 PM 12:00</p>
+          <span>송파 문정 더컨벤션 그랜드홀</span>
         </div>
 
         <div class="ly-contents type-detail">
