--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </h1>
         </div>
 
-        <div class="ly-contents">
-          <b><em>IY</em>&<em>DK</em></b>
+        <div class="ly-contents type-main">
+          <b><p>Y I Y</p>&<p>K D K</p></b>
           <p>2024.02.17 PM 12:00</p>
           <span>송파 문정 더컨벤션 그랜드홀</span>
         </div>
