--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap" rel="stylesheet">
 
     
   </head>
@@ -25,21 +25,28 @@
 
         <div class="ly-page01">
             <h1 class="txt-mainTit aos-item" data-aos="fade-in">
-                <a href="../html/getmarried.html">INVITATION</a>
+                <a href="../html/getmarried.html">초대합니다</a>
             </h1>
         </div>
 
         <div class="ly-contents type-main">
-          <b><p>Y I Y</p>&<p>K D K</p></b>
-          <p>2024.02.17 PM 12:00</p>
-          <span>더 컨벤션 송파문정점 그랜드홀</span>
+          <p>2024년 2월 3일</p>
+          <em>오후 12:30</em>
+          <b><p>양인영</p>&<p>김동균</p></b>
+          
+          <span>더 컨벤션 송파문정 아모르홀</span>
+
+          <div class="bg-main"></div>
+          <div class="bg-main type-inverse"></div>
         </div>
+
+   
 
         <div class="ly-contents type-detail">
           <strong class="aos-item" data-aos="fade-in" >결혼합니다</strong>
           <b class="txt-greet aos-item" data-aos="fade-in">
-            무엇을 이상을 얼음에 가장 따뜻한 설산에서 같으며, 뜨거운지라, 있으며, 쓸쓸하랴? 얼마나 뜨거운지라, 같지 하는 가는 것이다. 물방아 간에 위하여서 돋고, 그것을 약동하다. 동력은 피어나는 청춘의 얼마나 속에서 같으며, 우는 착목한는 봄바람이다. 무엇을 기관과 가치를 전인 바이며, 평화스러운 꽃 피어나기 봄바람이다. 얼마나 봄날의 피는 쓸쓸하랴? 인류의 기관과 놀이 방황하였으며, 피고, 주는 것이다. 노년에게서 싶이 무한한 밥을 이상의 만천하의 사막이다. 물방아 노래하며 얼음이 심장의 때문이다. 긴지라 보내는 못하다 그들을 이상, 장식하는 가치를 전인 피다.
-            </b>
+            초대문구 - 각자 쓸까? 
+          </b>
         </div>
 
         <div class="ly-contents type-gallery">
@@ -57,6 +64,10 @@
           <p>2024.02.17 (토) 오후 12시 30분</p>
           <p>더 컨벤션 송파문정점 그랜드홀</p>
           <span>서울 송파구 송파대로 155 NH송파농협</span>
+          <div class="wrap-btn">
+            <a href="#" alt="카카오톡지도">카카오 지도</a>
+            <a href="#" alt="네이버지도">네이버 지도</a>
+          </div>
           <div class="wrap-map">
 
           </div>
