--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         </div>
 
         <div class="ly-contents type-gallery">
-          <div class="list-photo">
+          <strong data-aos="fade-in">잘살겠습니다,</strong>
+          <div class="list-photo" data-aos="fade-in">
             <div class="data-photo">
              1
             </div>
@@ -60,30 +61,107 @@
         </div>
 
         <div class="ly-contents type-location">
-          <p>2024.02.17 (토) 오후 12시 30분</p>
-          <p>더 컨벤션 송파문정점 그랜드홀</p>
-          <span>서울 송파구 송파대로 155 NH송파농협</span>
-          <div class="wrap-btn">
+          <strong  data-aos="fade-in">님,<br/>
+          장소는 이 곳 입니다</strong>
+          <p data-aos="fade-in">2024.02.17 (토) 오후 12시 30분</p>
+          <p> data-aos="fade-in"더 컨벤션 송파문정점 그랜드홀</p>
+          <span data-aos="fade-in">서울 송파구 송파대로 155 NH송파농협</span>
+          <div class="wrap-btn"  data-aos="fade-in">
             <a href="#" alt="카카오톡지도">카카오 지도</a>
             <a href="#" alt="네이버지도">네이버 지도</a>
           </div>
           <div class="wrap-map">
-
+            map
           </div>
         </div>  
 
+        <div class="ly-contents type-mind">
+          <strong  data-aos="fade-in">소중한 마음,<br>
+          감사히 받겠습니다</strong>
+          <ul class="list-mind"  data-aos="fade-in">
+            <li>
+              <p>신랑측,</p>
+              <ul>
+                <li>
+                  <p>김성기,</p>
+                  <div class="txt-accountinfo">
+                    <b>기업 111-11212-11123</b>
+                    <div class="wrap-accountnum">
+                      <input id="my" value="2222" readonly>
+                      <button onclick="copy(event)">복사하기</button>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <p>오현영,</p>
+                  <div class="txt-accountinfo">
+                    <b>기업 010-9852-9357</b>
+                    <div class="wrap-accountnum">
+                      <input id="my" value="3333" readonly>
+                      <button onclick="copy(event)">복사하기</button>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <p>김동균,</p>
+                  <div class="txt-accountinfo">
+                    <b>기업 010-9852-9357</b>
+                    <div class="wrap-accountnum">
+                      <input id="my" value="1234" readonly>
+                      <button onclick="copy(event)">복사하기</button>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <p>신부측,</p>
+              <ul>
+                <li>
+                  <p>김진경,</p>
+                  <div class="txt-accountinfo">
+                    <b>기업 010-9852-9357</b>
+                    <div class="wrap-accountnum">
+                      <input id="my" value="123" readonly>
+                      <button onclick="copy(event)">복사하기</button>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <p>양인영,</p>
+                  <div class="txt-accountinfo">
+                    <b>기업 010-9852-9357</b>
+                    <div class="wrap-accountnum">
+                      <input id="my" value="01098528357" readonly>
+                      <button onclick="copy(event)">복사하기</button>
+                    </div>
+                  </div>
+                </li>
+
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <div class="ly-contents">
+          <strong data-aos="fade-in">
+            예식 때 뵙도록 하겠습니다,
+            <br>
+            귀한 발걸음,
+            <br>
+            정말 감사드립니다
+          </strong>
+        </div>
+
     </div>
 
-    <div class="bg-all"></div>
-
- 
 
     <script>
 
     $(document).on('ready', function() {
           $(".list-photo").slick({
             infinite: true,
-            speed: 600,
+            speed: 400,
             fade: true,
             cssEase: 'linear'
           });
@@ -92,6 +170,15 @@
     AOS.init({
       easing: 'linear'
     });   
+
+
+    function copy(event) {    
+      const copyText = event.target.previousElementSibling;
+      copyText.select();
+      copyText.setSelectionRange(0, 99999);
+      document.execCommand("Copy");
+      alert('복사 되었습니다, 감사합니다.');
+    }
 
     </script>
 
