--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         </div>
 
         <div class="ly-contents type-location">
-          <strong  data-aos="fade-in">님,<br/>
+          <strong data-aos="fade-in">님,<br/>
           장소는 이 곳 입니다</strong>
           <p data-aos="fade-in">2024.02.17 (토) 오후 12시 30분</p>
-          <p> data-aos="fade-in"더 컨벤션 송파문정점 그랜드홀</p>
+          <p data-aos="fade-in">더 컨벤션 송파문정점 그랜드홀</p>
           <span data-aos="fade-in">서울 송파구 송파대로 155 NH송파농협</span>
           <div class="wrap-btn"  data-aos="fade-in">
             <a href="#" alt="카카오톡지도">카카오 지도</a>
