--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <div class="ly-contents type-main">
        
           <b><p>양인영</p>&<p>김동균</p></b>
-          <p>2024년 2월 3일</p>
-          <em>오후 12:30</em>
+          <p>2024년 2월 3일 오후 12:30</p>
           <span>더 컨벤션 송파문정 아모르홀</span>
 
         </div>
@@ -41,10 +40,10 @@
             <em>축복처럼 만난 저희의 결혼에<br>
             축하해 주시면 감사하겠습니다,<br>
             모든분들 께 감사드립니다</em>
-            <b>인영,</b>
-            <em>저의 은퇴무대이자, 데뷔무대에 함께 해 주세요<br>
+            <b class="mt20">인영,</b>
+            <em>저의 은퇴무대이자,<br> 데뷔무대에 함께 해 주세요<br>
             와주신다면 정말 감사하겠습니다.</em>
-            <i>소중한 시간 나눠 주신다면 잊지 않겠습니다,</i>
+            <i class="mt30">소중한 시간 나눠 주신다면,<br>잊지 않겠습니다</i>
           </div>
         </div>
 
@@ -61,10 +60,11 @@
         </div>
 
         <div class="ly-contents type-location">
-          <strong data-aos="fade-in">님,<br/>
+          <strong data-aos="fade-in">
+            <span id="txt-userid"></span>님,<br/>
           장소는 이 곳 입니다</strong>
-          <p data-aos="fade-in">2024.02.17 (토) 오후 12시 30분</p>
-          <p data-aos="fade-in">더 컨벤션 송파문정점 그랜드홀</p>
+          <p data-aos="fade-in">2024.02.03 (토) 오후 12시 30분</p>
+          <p data-aos="fade-in">더 컨벤션 송파문정 아모르홀</p>
           <span data-aos="fade-in">서울 송파구 송파대로 155 NH송파농협</span>
           <div class="wrap-btn"  data-aos="fade-in">
             <a href="#" alt="카카오톡지도">카카오 지도</a>
@@ -87,7 +87,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 111-11212-11123</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="2222" readonly>
+                      <input id="my" value="0" readonly>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -97,7 +97,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="3333" readonly>
+                      <input id="my" value="1" readonly>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -107,7 +107,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="1234" readonly>
+                      <input id="my" value="2" readonly>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -122,7 +122,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="123" readonly>
+                      <input id="my" value="3" readonly>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -145,7 +145,9 @@
 
         <div class="ly-contents">
           <strong data-aos="fade-in">
-            예식 때 뵙도록 하겠습니다,
+            <span id="txt-userid"></span>님, 
+            <br>
+            예식 때 뵙도록 하겠습니다
             <br>
             귀한 발걸음,
             <br>
@@ -177,7 +179,7 @@
       copyText.select();
       copyText.setSelectionRange(0, 99999);
       document.execCommand("Copy");
-      alert('복사 되었습니다, 감사합니다.');
+      alert('감사합니다, 복사되었습니다.');
     }
 
     </script>
