--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta property="og:title" content="인영이와 동균이의 결혼식에 초대합니다"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://freeiny.github.io/invitation/" />
     <title>INVITATION</title>
     <link href="css/style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/favicon.ico">
