--- a/invitation.html
+++ b/invitation.html
@@ -56,10 +56,13 @@
           <strong data-aos="fade-in">잘살겠습니다,</strong>
           <div class="list-photo" data-aos="fade-in">
             <div class="data-photo">
-             1
+             111
             </div>
             <div class="data-photo">
-              2
+              222
+            </div>
+            <div class="data-photo">
+              333
             </div>
           </div>
         </div>
@@ -72,8 +75,8 @@
           <p data-aos="fade-in">더 컨벤션 송파문정 아모르홀</p>
           <span data-aos="fade-in">서울 송파구 송파대로 155 NH송파농협</span>
           <div class="wrap-btn"  data-aos="fade-in">
-            <a href="#" alt="카카오톡지도">카카오 지도</a>
-            <a href="#" alt="네이버지도">네이버 지도</a>
+            <a class="btn-map" href="#" alt="카카오톡지도">카카오 지도</a>
+            <a class="btn-map" href="#" alt="네이버지도">네이버 지도</a>
           </div>
           <div class="wrap-map">
             map
@@ -171,7 +174,8 @@
             infinite: true,
             speed: 400,
             fade: true,
-            cssEase: 'linear'
+            cssEase: 'linear',
+            dots: 'true'
           });
     });
     
