--- a/invitation.html
+++ b/invitation.html
@@ -32,7 +32,7 @@
        
           <b><p>양인영</p>&<p>김동균</p></b>
           <p>2024년 2월 3일 오후 12:30</p>
-          <span>더 컨벤션 송파문정 아모르홀</span>
+          <span>더 컨벤션 송파문정 아모르홀 12층</span>
 
         </div>
 
@@ -71,8 +71,7 @@
           <strong data-aos="fade-in">
             <span class="txt-userid"></span>님,<br/>
           장소는 이 곳 입니다</strong>
-          <p data-aos="fade-in">2024.02.03 (토) 오후 12시 30분</p>
-          <p data-aos="fade-in">더 컨벤션 송파문정 아모르홀</p>
+          <p data-aos="fade-in">더 컨벤션 송파문정 12층 아모르홀</p>
           <span data-aos="fade-in">서울 송파구 송파대로 155 NH송파농협</span>
           <div class="wrap-btn"  data-aos="fade-in">
             <a class="btn-map" href="#" alt="카카오톡지도">카카오 지도</a>
@@ -81,6 +80,19 @@
           <div class="wrap-map">
             map
           </div>
+          <ul class="list-maps">
+              <li>
+                <b>지하철</b>
+                <span>8호선 문정역 하차 3번출구 도보 5분</span>
+              </li>
+              <li>
+                <b>승용차</b>
+                <span>구주소 - 서울 송파구 문정동 651-8</span>
+                <span>신주소 - 서울 송파구 송파대로 155</span>
+                <span>주차장 - 건물 뒷 편</span>
+              </li>
+         
+          </ul>
         </div>  
 
         <div class="ly-contents type-mind">
@@ -183,7 +195,7 @@
       easing: 'linear'
     });   
 
-    //계좌번호 복사
+    //계좌번호 복사스
     function copy(event) {    
       const copyText = event.target.previousElementSibling;
       copyText.select();
@@ -192,11 +204,9 @@
       alert('감사합니다, 복사되었습니다.');
     }
 
-    const nameData = localStorage.getItem('name')
-    console.log(nameData)
+    const nameData = sessionStorage.getItem('Name')
 
     const writeName = document.querySelectorAll('.txt-userid');
-    console.log(writeName)
     for (let i = 0; i <writeName.length; i++){
       writeName[i].innerText = nameData;
     }
