--- a/invitation.html
+++ b/invitation.html
@@ -107,7 +107,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 111-11212-11123</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="0" readonly>
+                      <textarea>111111</textarea>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -117,7 +117,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="1" readonly>
+                      <textarea>555555</textarea>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -127,7 +127,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="2" readonly>
+                      <textarea>66666</textarea>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -142,7 +142,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="3" readonly>
+                      <textarea>88888</textarea>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -152,7 +152,7 @@
                   <div class="txt-accountinfo">
                     <b>기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
-                      <input id="my" value="01098528357" readonly>
+                      <textarea>01098527357</textarea>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -204,6 +204,7 @@
       alert('감사합니다, 복사되었습니다.');
     }
 
+    // 이름배열
     const nameData = sessionStorage.getItem('Name')
 
     const writeName = document.querySelectorAll('.txt-userid');
