--- a/invitation.html
+++ b/invitation.html
@@ -205,7 +205,7 @@
     }
 
     // 이름배열
-    const nameData = sessionStorage.getItem('Name')
+    const nameData = localStorage.getItem('Name')
 
     const writeName = document.querySelectorAll('.txt-userid');
     for (let i = 0; i <writeName.length; i++){
