이미지업데이느

--- a/invitation.html
+++ b/invitation.html
@@ -78,7 +78,7 @@
             <a class="btn-map" href="#" alt="네이버지도">네이버 지도</a>
           </div>
           <div class="wrap-map">
-            map
+            <img src="images/img_maps_w.png">
           </div>
           <ul class="list-maps">
               <li>
