--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       function saveUser() {
         const value = input.value;
         textName.innerText = value;
+        localStorage.setItem('Name', value)
         input.addEventListener('keydown', (e) => {
           if(e.keyCode === 13){
             localStorage.setItem('Name', value)
