--- a/invitation.html
+++ b/invitation.html
@@ -54,30 +54,41 @@
 
         <div class="ly-contents type-gallery">
           <strong data-aos="fade-in">잘살겠습니다,</strong>
-          <div class="list-photo" data-aos="fade-in">
-            <div class="data-photo">
-             111
+          <div class="wrap-gallery">
+            <div class="list-photo" data-aos="fade-in">
+              <div class="data-photo">
+               111
+              </div>
+              <div class="data-photo">
+                222
+              </div>
+              <div class="data-photo">
+                333
+              </div>
             </div>
-            <div class="data-photo">
-              222
-            </div>
-            <div class="data-photo">
-              333
+            <div class="arrow-g">
+              <span class="arrow-area">
+                <i class="arr-icon prev"></i>
+              </span>
+              <span class="arrow-area">
+                <i class="arr-icon next"></i>
+              </span>
             </div>
           </div>
+          
         </div>
 
         <div class="ly-contents type-location">
           <strong data-aos="fade-in">
-            <span class="txt-userid"></span>님,<br/>
+            <span class="txt-userid" data-aos="fade-in"></span>님,<br/>
           장소는 이 곳 입니다</strong>
           <p data-aos="fade-in">더 컨벤션 송파문정 12층 아모르홀</p>
           <span data-aos="fade-in">서울 송파구 송파대로 155 NH송파농협</span>
           <div class="wrap-btn"  data-aos="fade-in">
             <a class="btn-map" href="#" alt="카카오톡지도">카카오 지도</a>
-            <a class="btn-map" href="#" alt="네이버지도">네이버 지도</a>
+            <a class="btn-map naver" href="#" alt="네이버지도">네이버 지도</a>
           </div>
-          <div class="wrap-map">
+          <div class="wrap-map" data-aos="fade-in">
             <img src="images/img_maps_w.png">
           </div>
           <ul class="list-maps">
