--- a/invitation.html
+++ b/invitation.html
@@ -32,7 +32,7 @@
        
           <b><i>양인영</i>&<i>김동균</i></b>
           <p>2024년 2월 3일 오후 12:30</p>
-          <span>더 컨벤션 송파문정 아모르홀 12층</span>
+          <span class="color-lgr">더 컨벤션 송파문정 아모르홀 12층</span>
 
         </div>
 
