--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <form></form>
             <span>님,</span>
           </div>
-          <a class="btn-userinfo">확인</a>
+          <a class="btn-userinfo">다음</a>
         </div> 
 
   </body>
@@ -60,7 +60,7 @@
         const userNamedata = sessionStorage.getItem('Name')
         console.log(userNamedata)
           if(userNamedata === null){
-            alert('성함을 입력해주세요')
+            alert('안녕하세요! 성함을 입력해주세요')
           }else{
             location.href = 'invitation.html';
           }
