--- a/invitation.html
+++ b/invitation.html
@@ -31,7 +31,7 @@
         <div class="ly-contents type-main">
        
           <b><i>양인영</i>&<i>김동균</i></b>
-          <p>2024년 2월 3일 오후 12:30</p>
+          <p>2024년 2월 3일 오후 12시30분</p>
           <span class="color-lgr">더 컨벤션 송파문정 아모르홀 12층</span>
 
         </div>
@@ -50,6 +50,24 @@
             와주신다면 정말 감사하겠습니다.</em>
             <i class="mt30">소중한 시간 나눠 주신다면,<br>잊지 않겠습니다</i>
           </div>
+        </div>
+
+        <div class="ly-contents type-fm">
+          <img alt="일러스트나 사진">
+          <ul class="list-fm">
+            <li>
+              <p>양승권</p>
+              <p>김진경</p>
+              의 딸 
+              <p>양인영</p>
+            </li>
+            <li>
+              <p>김성기</p>
+              <p>오현영</p>
+              의 아들
+              <p>김동균</p>
+            </li>
+          </ul>
         </div>
 
         <div class="ly-contents type-gallery">
@@ -85,7 +103,7 @@
           <p class="color-gr" data-aos="fade-in">더 컨벤션 송파문정 12층 아모르홀</p>
 
           <div class="wrap-map" data-aos="fade-in">
-            <img src="images/img_maps_w.png">
+            <img src="images/img_maps_02.png">
           </div>
           <div class="wrap-btn"  data-aos="fade-in">
             <a class="btn-map" href="#" alt="카카오톡지도">카카오 지도</a>
@@ -161,7 +179,7 @@
                     </div>
                   </div>
                 </li>
-                <li>
+                <li class="mt20">
                   <p>양인영,</p>
                   <div class="txt-accountinfo">
                     <b>기업 010-9852-9357</b>
