--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <!-- <meta content="width=device-width, initial-scale=1.0" name="viewport" /> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10,user-scalable=no">
     <meta property="og:title" content="인영이와 동균이의 결혼식에 초대합니다"/>
+    <meta property="og:description" content="2024년 2월 3일 12시 30분 송파문정 아모르홀 12층">
     <meta property="og:type" content="website"/>
     <title>INVITATION</title>
     <link href="css/style.css" rel="stylesheet" />
