--- a/invitation.html
+++ b/invitation.html
@@ -5,6 +5,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>INVITATION</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10,user-scalable=no">
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/aos.css" rel="stylesheet" />
     <link href="css/slick.css" rel="stylesheet" />
