--- a/invitation.html
+++ b/invitation.html
@@ -33,7 +33,7 @@
        
           <b><i>양인영</i>&<i>김동균</i></b>
           <p>2024년 2월 3일 오후 12시30분</p>
-          <span class="color-lgr">더 컨벤션 송파문정 아모르홀 12층</span>
+          <span class="color-gr">더 컨벤션 송파문정 아모르홀 12층</span>
 
         </div>
 
@@ -42,11 +42,11 @@
             <span class="txt-userid"></span>님,<br/>
             저희 결혼해요</strong>
           <div class="txt-greet aos-item" data-aos="fade-in">
-            <b>동균,</b>
+            <b class="color-gr">동균,</b>
             <em>축복처럼 만난 저희의 결혼에<br>
             축하해 주시면 감사하겠습니다,<br>
             모든분들 께 감사드립니다</em>
-            <b class="mt20">인영,</b>
+            <b class="mt20 color-gr">인영,</b>
             <em>저의 은퇴무대이자,<br> 데뷔무대에 함께 해 주세요<br>
             와주신다면 정말 감사하겠습니다.</em>
             <i class="mt30">소중한 시간 나눠 주신다면,<br>잊지 않겠습니다</i>
