--- a/invitation.html
+++ b/invitation.html
@@ -106,12 +106,12 @@
           <div class="wrap-map" data-aos="fade-in">
             <img src="images/img_maps_02.png">
           </div>
-          <div class="wrap-btn"  data-aos="fade-in">
+          <div class="wrap-btn" data-aos="fade-in">
             <a class="btn-map" href="#" alt="카카오톡지도">카카오 지도</a>
             <a class="btn-map naver" href="#" alt="네이버지도">네이버 지도</a>
           </div>
         
-          <ul class="list-maps">
+          <ul class="list-maps" data-aos="fade-in">
               <li>
                 <b>지하철</b>
                 <span>8호선 문정역 하차 3번출구 도보 5분</span>
