--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <div class="ly-all">
 
         <div class="ly-contents type-userinfo">
-          <p>안녕하세요,</p>
-          <p>받으시는 분의<br/>성함을 알고싶어요</p>
-          <div class="wrap-input mt10">
+          <p class="txt-lg">안녕하세요,<br/>
+          받으시는 분의<br/>성함을 알고싶어요</p>
+          <div class="wrap-input mt10 txt-lg">
             <form></form>
-              <input class="data-name" onkeyup='saveUser()' type="text">
-              <b class="data-result"></b>
+              <input class="data-name txt-lg" onkeyup='saveUser()' type="text">
+              <b class="data-result txt-lg"></b>
             <form></form>
-            <span>님,</span>
+            <span class="txt-lg">님,</span>
           </div>
-          <a class="btn-userinfo">다음</a>
+          <a class="btn-userinfo ">다음</a>
         </div> 
 
   </body>
