--- a/invitation.html
+++ b/invitation.html
@@ -30,9 +30,9 @@
 
     <div class="ly-all">
         <div class="ly-contents type-main">
-          <span class="txt-lg">양인영<i class="txt-lg">&</i>김동균</span>
+          <span class="txt-lg mt10">양인영<i class="txt-lg">&</i>김동균</span>
           <p class="txt-md">2024년 2월 3일 오후 12시30분</p>
-          <span class="color-gr txt-md">더 컨벤션 송파문정 아모르홀 12층</span>
+          <span class="color-gr txt-md mt10">더 컨벤션 송파문정 아모르홀 12층</span>
 
         </div>
 
@@ -56,16 +56,20 @@
           <img alt="일러스트나 사진">
           <ul class="list-fm">
             <li>
-              <p>양승권</p>
-              <p>김진경</p>
-              의 딸 
-              <p>양인영</p>
+              <span>
+                <i>양승권</i>
+                <i>김진경</i>
+                의 딸 
+              </span>
+              <em>양인영</em>
             </li>
             <li>
-              <p>김성기</p>
-              <p>오현영</p>
-              의 아들
-              <p>김동균</p>
+              <span>
+                <i>김성기</i>
+                <i>오현영</i>
+                의 아들
+              </span>
+              <em>김동균</em>
             </li>
           </ul>
         </div>
@@ -75,13 +79,13 @@
           <div class="wrap-gallery">
             <div class="list-photo" data-aos="fade-in">
               <div class="data-photo">
-               111
+               <img src="images/p1.jpg">
               </div>
               <div class="data-photo">
-                222
+                <img src="images/p2.jpg">
               </div>
               <div class="data-photo">
-                333
+                <img src="images/p3.jpg">
               </div>
             </div>
             <div class="arrow-g">
@@ -137,7 +141,7 @@
                 <li>
                   <p>김성기,</p>
                   <div class="txt-accountinfo">
-                    <b>기업 111-11212-11123</b>
+                    <b class="color-lgr">기업 111-11212-11123</b>
                     <div class="wrap-accountnum">
                       <textarea>111111</textarea>
                       <button onclick="copy(event)">복사하기</button>
@@ -147,7 +151,7 @@
                 <li>
                   <p>오현영,</p>
                   <div class="txt-accountinfo">
-                    <b>기업 010-9852-9357</b>
+                    <b class="color-lgr">기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
                       <textarea>555555</textarea>
                       <button onclick="copy(event)">복사하기</button>
@@ -157,7 +161,7 @@
                 <li>
                   <p>김동균,</p>
                   <div class="txt-accountinfo">
-                    <b>기업 010-9852-9357</b>
+                    <b class="color-lgr">국민 010-9852-9357</b>
                     <div class="wrap-accountnum">
                       <textarea>66666</textarea>
                       <button onclick="copy(event)">복사하기</button>
@@ -172,7 +176,7 @@
                 <li>
                   <p>김진경,</p>
                   <div class="txt-accountinfo">
-                    <b>기업 010-9852-9357</b>
+                    <b class="color-lgr">기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
                       <textarea>88888</textarea>
                       <button onclick="copy(event)">복사하기</button>
@@ -182,7 +186,7 @@
                 <li class="mt20">
                   <p>양인영,</p>
                   <div class="txt-accountinfo">
-                    <b>기업 010-9852-9357</b>
+                    <b class="color-lgr">기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
                       <textarea>01098527357</textarea>
                       <button onclick="copy(event)">복사하기</button>
