--- a/invitation.html
+++ b/invitation.html
@@ -221,7 +221,7 @@
             speed: 400,
             fade: true,
             cssEase: 'linear',
-            dots: 'true'
+            dots: true
           });
     });
     
