--- a/invitation.html
+++ b/invitation.html
@@ -24,6 +24,7 @@
     
     <div class="ly-contents type-userinfo type-fixed">
       <p class="txt-lg"><span class="txt-userid txt-lg"></span>님,</p>
+      <p class="txt-lg">안녕하세요,</p>
       <p class="txt-lg">초대합니다</p>
     </div> 
      
@@ -117,13 +118,13 @@
           <ul class="list-maps" data-aos="fade-in">
               <li>
                 <b>지하철</b>
-                <span>8호선 문정역 하차 3번출구 도보 5분</span>
+                <span>8호선 문정역 하차 3번 출구 도보 5분</span>
               </li>
               <li>
                 <b>승용차</b>
                 <span>구주소 - 서울 송파구 문정동 651-8</span>
                 <span>도로명 - 서울 송파구 송파대로 155</span>
-                <span>주차장 - 건물 뒷 편</span>
+                <span>주차장 - 건물 뒷 편 (하객 두시간 무료)</span>
               </li>
           </ul>
           <span class="txt-md color-gr" data-aos="fade-in">서울 송파구 송파대로 155 NH송파농협</span>
@@ -176,9 +177,9 @@
                 <li>
                   <p>김진경,</p>
                   <div class="txt-accountinfo">
-                    <b class="color-lgr">기업 010-9852-9357</b>
+                    <b class="color-lgr">신한 201321-4120152</b>
                     <div class="wrap-accountnum">
-                      <textarea>88888</textarea>
+                      <textarea>4120152</textarea>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
@@ -186,9 +187,9 @@
                 <li class="mt20">
                   <p>양인영,</p>
                   <div class="txt-accountinfo">
-                    <b class="color-lgr">기업 010-9852-9357</b>
+                    <b class="color-lgr">우리 1002-331-579714</b>
                     <div class="wrap-accountnum">
-                      <textarea>01098527357</textarea>
+                      <textarea>1002331579714</textarea>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
