지도업데이트

--- a/invitation.html
+++ b/invitation.html
@@ -111,8 +111,8 @@
             <img src="images/img_maps_02.png">
           </div>
           <div class="wrap-btn" data-aos="fade-in">
-            <a class="btn-map" href="#" alt="카카오톡지도">카카오 지도</a>
-            <a class="btn-map naver" href="#" alt="네이버지도">네이버 지도</a>
+            <a class="btn-map" href="https://kko.to/jkgiLKZP-6" alt="카카오톡지도">카카오 지도</a>
+            <a class="btn-map naver" href="https://naver.me/FZJ9VxaE" alt="네이버지도">네이버 지도</a>
           </div>
         
           <ul class="list-maps" data-aos="fade-in">
@@ -219,7 +219,7 @@
     $(document).on('ready', function() {
           $(".list-photo").slick({
             infinite: true,
-            speed: 300,
+            speed: 250,
             fade: true,
             cssEase: 'linear',
             dots: true
