--- a/invitation.html
+++ b/invitation.html
@@ -108,7 +108,7 @@
           <p class="color-gr" data-aos="fade-in">더 컨벤션 송파문정 12층 아모르홀</p>
 
           <div class="wrap-map" data-aos="fade-in">
-            <img src="images/img_maps_02.png">
+            <img src="images/img_map_02.png">
           </div>
           <div class="wrap-btn" data-aos="fade-in">
             <a class="btn-map" href="https://kko.to/jkgiLKZP-6" alt="카카오톡지도">카카오 지도</a>
