샘플업로드

--- a/invitation.html
+++ b/invitation.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     
-    <div class="ly-contents type-userinfo type-fixed">
+    <div class="ly-contents type-fixed">
       <p class="txt-lg"><span class="txt-userid txt-lg"></span>님,</p>
       <p class="txt-lg">안녕하세요,</p>
       <p class="txt-lg">초대합니다</p>
@@ -30,11 +30,15 @@
      
 
     <div class="ly-all">
+      <i class="svg-icon ic-star3 ic03"></i>
+      <i class="svg-icon ic-star3 ic04"></i>
+      <i class="svg-icon ic-star3 ic05"></i>
+      <i class="svg-icon ic-star3 ic06"></i>
+      <i class="svg-icon ic-star3 ic07"></i>
         <div class="ly-contents type-main">
           <span class="txt-lg mt10">양인영<i class="txt-lg">&</i>김동균</span>
           <p class="txt-md">2024년 2월 3일 오후 12시30분</p>
           <span class="color-gr txt-md mt10">더 컨벤션 송파문정 아모르홀 12층</span>
-
         </div>
 
         <div class="ly-contents type-detail">
