폰트정리확인

--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
     <!-- <meta content="width=device-width, initial-scale=1.0" name="viewport" /> -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10,user-scalable=no">
     <meta property="og:title" content="인영이와 동균이의 결혼식에 초대합니다"/>
-    <meta property="og:description" content="2024.02.03 12:30 송파문정 아모르홀 12층">
+    <meta property="og:description" content="24.02.03 PM 12:30">
     <meta property="og:type" content="website"/>
     <title>INVITATION</title>
     <link href="css/style.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/favicon.ico">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap" rel="stylesheet">
 
     
   </head>
