--- a/invitation.html
+++ b/invitation.html
@@ -14,10 +14,6 @@
     <script src="js/aos.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="images/favicon.ico">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap" rel="stylesheet">
-
     
   </head>
   <body>
@@ -37,8 +33,8 @@
       <i class="svg-icon ic-star3 ic07"></i>
         <div class="ly-contents type-main">
           <span class="txt-lg mt10">양인영<i class="txt-lg">&</i>김동균</span>
-          <p class="txt-md">2024년 2월 3일 오후 12시30분</p>
-          <span class="color-gr txt-md mt10">더 컨벤션 송파문정 아모르홀 12층</span>
+          <p class="txt-md mt30">2024년 2월 3일 오후 12시30분</p>
+          <span class="color-gr txt-md mt10">더 컨벤션 송파문정 아모르홀 13층</span>
         </div>
 
         <div class="ly-contents type-detail">
@@ -109,7 +105,7 @@
           <strong data-aos="fade-in" class="txt-lg">
             <span class="txt-userid txt-lg" data-aos="fade-in"></span>님,<br/>
           장소는 이 곳 입니다</strong>
-          <p class="color-gr" data-aos="fade-in">더 컨벤션 송파문정 12층 아모르홀</p>
+          <p class="color-gr" data-aos="fade-in">더 컨벤션 송파문정 13층 아모르홀</p>
 
           <div class="wrap-map" data-aos="fade-in">
             <img src="images/img_map_02.png">
@@ -119,7 +115,7 @@
             <a class="btn-map naver" href="https://naver.me/FZJ9VxaE" alt="네이버지도">네이버 지도</a>
           </div>
         
-          <ul class="list-maps" data-aos="fade-in">
+          <ul class="list-maps mt20" data-aos="fade-in">
               <li>
                 <b>지하철</b>
                 <span>8호선 문정역 하차 3번 출구 도보 5분</span>
