--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     
-    <div class="ly-all">
+    <div class="ly-start">
 
         <div class="ly-contents type-userinfo">
           <p class="txt-lg">안녕하세요,<br/>
@@ -28,7 +28,7 @@
             <form></form>
             <span class="txt-lg">님,</span>
           </div>
-          <a class="btn-userinfo ">다음</a>
+          <a class="btn-userinfo ">다음으로</a>
         </div> 
 
   </body>
