--- a/invitation.html
+++ b/invitation.html
@@ -105,7 +105,6 @@
           <strong data-aos="fade-in" class="txt-lg">
             <span class="txt-userid txt-lg" data-aos="fade-in"></span>님,<br/>
           장소는 이 곳 입니다</strong>
-          <p class="color-gr" data-aos="fade-in">더 컨벤션 송파문정 13층 아모르홀</p>
 
           <div class="wrap-map" data-aos="fade-in">
             <img src="images/img_map_02.png">
@@ -118,16 +117,21 @@
           <ul class="list-maps mt20" data-aos="fade-in">
               <li>
                 <b>지하철</b>
-                <span>8호선 문정역 하차 3번 출구 도보 5분</span>
+                <span>8호선 <mark>문정역 3번 출구</mark> 도보 5분</span>
+              </li>
+              <li>
+                <b>버스</b>
+                <span>1 버스</span>
+                <span>200,344,111,112</span>
               </li>
               <li>
                 <b>승용차</b>
-                <span>구주소 - 서울 송파구 문정동 651-8</span>
-                <span>도로명 - 서울 송파구 송파대로 155</span>
-                <span>주차장 - 건물 뒷 편 (하객 두시간 무료)</span>
+                <span><em>구주소</em> - 서울 송파구 문정동 651-8</span>
+                <span><em>신주소</em> - 서울 송파구 송파대로 155</span>
+                <span><em>주차장</em> - 건물 뒷 편 <mark>(하객 2시간 무료)</mark></span>
               </li>
           </ul>
-          <span class="txt-md color-gr" data-aos="fade-in">서울 송파구 송파대로 155 NH송파농협</span>
+          <span class="color-gr" data-aos="fade-in">서울 송파구 송파대로 155 더컨벤션</span>
 
           
         </div>  
@@ -135,6 +139,10 @@
         <div class="ly-contents type-mind">
           <strong class="txt-lg" data-aos="fade-in">소중한 마음,<br>
           감사히 받겠습니다</strong>
+          <p class="color-lgr" data-aos="fade-in">참석이 어려우신 분들을 위해<br/>
+            계좌번호를 기재하였습니다
+            <br/>너그러운 마음으로 양해 부탁드립니다
+          </p>
           <ul class="list-mind"  data-aos="fade-in">
             <li>
               <p class="color-gr">신랑측,</p>
