이미지업데이트

--- a/invitation.html
+++ b/invitation.html
@@ -80,13 +80,13 @@
           <div class="wrap-gallery">
             <div class="list-photo" data-aos="fade-in">
               <div class="data-photo">
-               <img src="images/p1.jpg">
+               <img src="images/p1.png">
               </div>
               <div class="data-photo">
-                <img src="images/p2.jpg">
+                <img src="images/p2.png">
               </div>
               <div class="data-photo">
-                <img src="images/p3.jpg">
+                <img src="images/p3.png">
               </div>
             </div>
             <div class="arrow-g">
