--- a/invitation.html
+++ b/invitation.html
@@ -26,8 +26,9 @@
      
 
     <div class="ly-all">
+      <i class="svg-icon ic-star3 ic02"></i>
       <i class="svg-icon ic-star3 ic03"></i>
-      <i class="svg-icon ic-star2 ic04"></i>
+      <i class="svg-icon ic-star3 ic04"></i>
       <i class="svg-icon ic-star3 ic05"></i>
       <i class="svg-icon ic-star3 ic06"></i>
       <i class="svg-icon ic-star3 ic07"></i>
@@ -80,10 +81,16 @@
           <div class="wrap-gallery">
             <div class="list-photo" data-aos="fade-in">
               <div class="data-photo">
-               <img src="images/p1.png">
+                <img src="images/p2.png">
               </div>
               <div class="data-photo">
-                <img src="images/p2.png">
+                <img src="images/p0.png">
+               </div>
+              <div class="data-photo">
+                <img src="images/p4.png">
+              </div>
+              <div class="data-photo">
+               <img src="images/p1.png">
               </div>
               <div class="data-photo">
                 <img src="images/p3.png">
@@ -121,8 +128,16 @@
               </li>
               <li>
                 <b>버스</b>
-                <span>1 버스</span>
-                <span>200,344,111,112</span>
+                <i>일반</i>
+                <span>30, 31, 32, 100, 119, 331</span>
+                <i>간선</i>
+                <span>302, 303, 320, 333, 350, 360, 362, 343, 345</span>
+                <i>지선</i>
+                <span>3322,3420</span>
+                <i>광역</i>
+                <span>9403, M5342</span>
+                <i>직행</i>
+                <span>500-1, 1009, 1112, 1117, 1650, 3302</span>
               </li>
               <li>
                 <b>승용차</b>
@@ -179,7 +194,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="mt20">
               <p class="color-gr">신부측,</p>
               <ul>
                 <li>
@@ -192,7 +207,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="mt20">
+                <li>
                   <p>양인영,</p>
                   <div class="txt-accountinfo">
                     <b class="color-lgr">우리 1002-331-579714</b>
