이미지넣기

--- a/invitation.html
+++ b/invitation.html
@@ -36,6 +36,9 @@
           <span class="txt-lg mt10">양인영<i class="txt-lg">&</i>김동균</span>
           <p class="txt-md mt30">2024년 2월 3일 오후 12시30분</p>
           <span class="color-gr txt-md mt10">더 컨벤션 송파문정 아모르홀 13층</span>
+          <i class="img-main">
+            <img src="images/img_main.png">
+          </i>
         </div>
 
         <div class="ly-contents type-detail">
