--- a/invitation.html
+++ b/invitation.html
@@ -26,16 +26,17 @@
      
 
     <div class="ly-all">
-      <i class="svg-icon ic-star3 ic02"></i>
-      <i class="svg-icon ic-star3 ic03"></i>
-      <i class="svg-icon ic-star3 ic04"></i>
-      <i class="svg-icon ic-star3 ic05"></i>
-      <i class="svg-icon ic-star3 ic06"></i>
-      <i class="svg-icon ic-star3 ic07"></i>
+        <i class="svg-icon ic-star3 ic02"></i>
+        <i class="svg-icon ic-star3 ic03"></i>
+        <i class="svg-icon ic-star3 ic04"></i>
+        <i class="svg-icon ic-star3 ic05"></i>
+        <i class="svg-icon ic-star3 ic06"></i>
+        <i class="svg-icon ic-star3 ic07"></i>
+
         <div class="ly-contents type-main">
           <span class="txt-lg mt10">양인영<i class="txt-lg">&</i>김동균</span>
           <p class="txt-md mt30">2024년 2월 3일 오후 12시30분</p>
-          <span class="color-gr txt-md mt10">더 컨벤션 송파문정 아모르홀 13층</span>
+          <span class="color-gr txt-md mt6">더 컨벤션 송파문정 아모르홀 13층</span>
           <i class="img-main">
             <img src="images/img_main.png">
           </i>
@@ -53,12 +54,12 @@
             <b class="mt20 color-gr">인영,</b>
             <em>저의 은퇴무대이자,<br> 데뷔무대에 함께 해 주세요<br>
             와주신다면 정말 감사하겠습니다.</em>
-            <i class="mt30">소중한 시간 나눠 주신다면,<br>잊지 않겠습니다</i>
+            <i class="mt30 color-lgr">소중한 시간 나눠 주신다면,<br>잊지 않겠습니다</i>
           </div>
         </div>
 
         <div class="ly-contents type-fm">
-          <img alt="일러스트나 사진">
+          <img src="images/img_main.png" width="200">
           <ul class="list-fm">
             <li>
               <span>
