--- a/invitation.html
+++ b/invitation.html
@@ -130,7 +130,7 @@
                 <b>지하철</b>
                 <span>8호선 <mark>문정역 3번 출구</mark> 도보 5분</span>
               </li>
-              <li>
+              <li class="bus">
                 <b>버스</b>
                 <i>일반</i>
                 <span>30, 31, 32, 100, 119, 331</span>
@@ -145,9 +145,9 @@
               </li>
               <li>
                 <b>승용차</b>
-                <span><em>구주소</em> - 서울 송파구 문정동 651-8</span>
-                <span><em>신주소</em> - 서울 송파구 송파대로 155</span>
-                <span><em>주차장</em> - 건물 뒷 편 <mark>(하객 2시간 무료)</mark></span>
+                <span><i>구주소</i> - 서울 송파구 문정동 651-8</span>
+                <span><i>신주소</i> - 서울 송파구 송파대로 155</span>
+                <span><i>주차장</i> - 건물 뒷 편 <mark>(하객 2시간 무료)</mark></span>
               </li>
           </ul>
           <span class="color-gr" data-aos="fade-in">서울 송파구 송파대로 155 더컨벤션</span>
