--- a/invitation.html
+++ b/invitation.html
@@ -63,19 +63,19 @@
           <ul class="list-fm">
             <li>
               <span>
-                <i>양승권</i>
-                <i>김진경</i>
+                <i class="color-lgr">양승권</i>
+                <i class="color-lgr">김진경</i>
                 의 딸 
               </span>
-              <em>양인영</em>
+              <em class="color-lgr">양인영</em>
             </li>
             <li>
               <span>
-                <i>김성기</i>
-                <i>오현영</i>
+                <i class="color-lgr">김성기</i>
+                <i class="color-lgr">오현영</i>
                 의 아들
               </span>
-              <em>김동균</em>
+              <em class="color-lgr">김동균</em>
             </li>
           </ul>
         </div>
