--- a/invitation.html
+++ b/invitation.html
@@ -167,7 +167,7 @@
               <p class="color-gr">신랑측,</p>
               <ul>
                 <li>
-                  <p>김성기,</p>
+                  <p>김성기</p>
                   <div class="txt-accountinfo">
                     <b class="color-lgr">기업 111-11212-11123</b>
                     <div class="wrap-accountnum">
@@ -177,7 +177,7 @@
                   </div>
                 </li>
                 <li>
-                  <p>오현영,</p>
+                  <p>오현영</p>
                   <div class="txt-accountinfo">
                     <b class="color-lgr">기업 010-9852-9357</b>
                     <div class="wrap-accountnum">
@@ -187,7 +187,7 @@
                   </div>
                 </li>
                 <li>
-                  <p>김동균,</p>
+                  <p>김동균</p>
                   <div class="txt-accountinfo">
                     <b class="color-lgr">국민 010-9852-9357</b>
                     <div class="wrap-accountnum">
@@ -202,17 +202,17 @@
               <p class="color-gr">신부측,</p>
               <ul>
                 <li>
-                  <p>김진경,</p>
+                  <p>김진경</p>
                   <div class="txt-accountinfo">
-                    <b class="color-lgr">신한 201321-4120152</b>
+                    <b class="color-lgr">신한 110-249-569450</b>
                     <div class="wrap-accountnum">
-                      <textarea>4120152</textarea>
+                      <textarea>110249569450</textarea>
                       <button onclick="copy(event)">복사하기</button>
                     </div>
                   </div>
                 </li>
                 <li>
-                  <p>양인영,</p>
+                  <p>양인영</p>
                   <div class="txt-accountinfo">
                     <b class="color-lgr">우리 1002-331-579714</b>
                     <div class="wrap-accountnum">
