--- a/invitation.html
+++ b/invitation.html
@@ -145,9 +145,9 @@
               </li>
               <li>
                 <b>승용차</b>
-                <span><i>구주소</i> - 서울 송파구 문정동 651-8</span>
-                <span><i>신주소</i> - 서울 송파구 송파대로 155</span>
-                <span><i>주차장</i> - 건물 뒷 편 <mark>(하객 2시간 무료)</mark></span>
+                <span><i>구주소</i> 서울 송파구 문정동 651-8</span>
+                <span><i>신주소</i> 서울 송파구 송파대로 155</span>
+                <span><i>주차장</i> 건물 뒷 편 <mark>(하객 2시간 무료)</mark></span>
               </li>
           </ul>
           <span class="color-gr" data-aos="fade-in">서울 송파구 송파대로 155 더컨벤션</span>
@@ -164,65 +164,75 @@
           </p>
           <ul class="list-mind"  data-aos="fade-in">
             <li>
-              <p class="color-gr">신랑측,</p>
-              <ul>
-                <li>
-                  <p>김성기</p>
-                  <div class="txt-accountinfo">
-                    <b class="color-lgr">기업 111-11212-11123</b>
-                    <div class="wrap-accountnum">
-                      <textarea>111111</textarea>
-                      <button onclick="copy(event)">복사하기</button>
+              <details>
+                <summary>
+                  <p class="color-gr">신랑측,</p>
+                  <i class="arr-icon down"></i>
+                </summary>              
+                <ul class="list-acc">
+                  <li>
+                    <p>김성기</p>
+                    <div class="txt-accountinfo">
+                      <b class="color-lgr">기업 111-11212-11123</b>
+                      <div class="wrap-accountnum">
+                        <textarea>111111</textarea>
+                        <button onclick="copy(event)">복사하기</button>
+                      </div>
                     </div>
-                  </div>
-                </li>
-                <li>
-                  <p>오현영</p>
-                  <div class="txt-accountinfo">
-                    <b class="color-lgr">기업 010-9852-9357</b>
-                    <div class="wrap-accountnum">
-                      <textarea>555555</textarea>
-                      <button onclick="copy(event)">복사하기</button>
+                  </li>
+                  <li>
+                    <p>오현영</p>
+                    <div class="txt-accountinfo">
+                      <b class="color-lgr">국민 080-21-0677-555</b>
+                      <div class="wrap-accountnum">
+                        <textarea>080210677555</textarea>
+                        <button onclick="copy(event)">복사하기</button>
+                      </div>
                     </div>
-                  </div>
-                </li>
-                <li>
-                  <p>김동균</p>
-                  <div class="txt-accountinfo">
-                    <b class="color-lgr">국민 010-9852-9357</b>
-                    <div class="wrap-accountnum">
-                      <textarea>66666</textarea>
-                      <button onclick="copy(event)">복사하기</button>
+                  </li>
+                  <li>
+                    <p>김동균</p>
+                    <div class="txt-accountinfo">
+                      <b class="color-lgr">국민 207302-04-086302</b>
+                      <div class="wrap-accountnum">
+                        <textarea>20730204086302</textarea>
+                        <button onclick="copy(event)">복사하기</button>
+                      </div>
                     </div>
-                  </div>
-                </li>
-              </ul>
+                  </li>
+                </ul>
+              </details>
             </li>
-            <li class="mt20">
-              <p class="color-gr">신부측,</p>
-              <ul>
-                <li>
-                  <p>김진경</p>
-                  <div class="txt-accountinfo">
-                    <b class="color-lgr">신한 110-249-569450</b>
-                    <div class="wrap-accountnum">
-                      <textarea>110249569450</textarea>
-                      <button onclick="copy(event)">복사하기</button>
+            <li>
+              <details>
+                <summary>
+                  <p class="color-gr">신부측,</p>
+                  <i class="arr-icon down"></i>
+                </summary>
+                <ul class="list-acc">
+                  <li>
+                    <p>김진경</p>
+                    <div class="txt-accountinfo">
+                      <b class="color-lgr">신한 110-249-569450</b>
+                      <div class="wrap-accountnum">
+                        <textarea>110249569450</textarea>
+                        <button onclick="copy(event)">복사하기</button>
+                      </div>
                     </div>
-                  </div>
-                </li>
-                <li>
-                  <p>양인영</p>
-                  <div class="txt-accountinfo">
-                    <b class="color-lgr">우리 1002-331-579714</b>
-                    <div class="wrap-accountnum">
-                      <textarea>1002331579714</textarea>
-                      <button onclick="copy(event)">복사하기</button>
+                  </li>
+                  <li>
+                    <p>양인영</p>
+                    <div class="txt-accountinfo">
+                      <b class="color-lgr">우리 1002-331-579714</b>
+                      <div class="wrap-accountnum">
+                        <textarea>1002331579714</textarea>
+                        <button onclick="copy(event)">복사하기</button>
+                      </div>
                     </div>
-                  </div>
-                </li>
+                  </li>
 
-              </ul>
+                </ul>
+              </details>
             </li>
           </ul>
         </div>
@@ -252,11 +262,9 @@
             dots: true
           });
     });
-    
     AOS.init({
       easing: 'linear'
-    });   
-
+    });  
     //계좌번호 복사스
     function copy(event) {    
       const copyText = event.target.previousElementSibling;
@@ -265,19 +273,26 @@
       document.execCommand("Copy");
       alert('감사합니다, 복사되었습니다.');
     }
-
     // 이름배열
     const nameData = sessionStorage.getItem('Name')
-
     const writeName = document.querySelectorAll('.txt-userid');
     for (let i = 0; i <writeName.length; i++){
       writeName[i].innerText = nameData;
     }
    
-
+    //화살표돌아가기
+    const details = document.querySelector('details')
+    details.addEventListener("toggle", (event) => {
+      const arr = document.querySelector('summary .arr-icon')
+      if (details.open) {
+        arr.classList.add('up');
+        arr.classList.remove('down');
+      } else {
+        arr.classList.remove('up');
+        arr.classList.add('down');
+      }
+    });
     </script>
-
-
 
   </body>
 
