--- a/invitation.html
+++ b/invitation.html
@@ -21,7 +21,7 @@
     <div class="ly-contents type-fixed">
       <p class="txt-lg"><span class="txt-userid txt-lg"></span>님,</p>
       <p class="txt-lg">안녕하세요,</p>
-      <p class="txt-lg">초대합니다</p>
+      <p class="txt-lg">초대합니다!</p>
     </div> 
      
 
@@ -52,9 +52,9 @@
             축하해 주시면 감사하겠습니다,<br>
             모든분들 께 감사드립니다</em>
             <b class="mt20 color-gr">인영,</b>
-            <em>저의 은퇴무대이자,<br> 데뷔무대에 함께 해 주세요<br>
-            와주신다면 정말 감사하겠습니다.</em>
-            <i class="mt30 color-lgr">소중한 시간 나눠 주신다면,<br>잊지 않겠습니다</i>
+            <em>저의 은퇴무대이자,<br> 데뷔무대에 함께 해주세요!<br>
+            와주신다면 정말 감사하겠습니다</em>
+            <i class="mt30 color-lgr">나눠주신 소중한 시간,<br>잊지 않겠습니다</i>
           </div>
         </div>
 
@@ -81,7 +81,8 @@
         </div>
 
         <div class="ly-contents type-gallery">
-          <strong data-aos="fade-in" class="txt-lg">잘살겠습니다,</strong>
+          <strong data-aos="fade-in" class="txt-lg">
+            알콩달콩 잘살겠습니다,</strong>
           <div class="wrap-gallery">
             <div class="list-photo" data-aos="fade-in">
               <div class="data-photo">
@@ -239,9 +240,9 @@
 
         <div class="ly-contents type-last">
           <strong data-aos="fade-in" class="txt-lg">
-            <span class="txt-userid txt-lg"></span>님, 
+            그럼 <span class="txt-userid txt-lg"></span>님, 
             <br>
-            예식 때 뵙도록 하겠습니다
+            예식 때 만나길 바라요
             <br>
             정말 감사드립니다
           </strong>
