--- a/invitation.html
+++ b/invitation.html
@@ -19,7 +19,7 @@
   <body>
     
     <div class="ly-contents type-fixed">
-      <p class="txt-lg"><span class="txt-userid txt-lg"></span>님,</p>
+      <p class="txt-lg"><span class="txt-userid txt-lg color-pi"></span>님,</p>
       <p class="txt-lg">안녕하세요,</p>
       <p class="txt-lg">초대합니다!</p>
     </div> 
@@ -44,7 +44,7 @@
 
         <div class="ly-contents type-detail">
           <strong class="aos-item txt-lg" data-aos="fade-in" >
-            <span class="txt-userid txt-lg"></span>님,<br/>
+            <span class="txt-userid txt-lg color-pi"></span>님,<br/>
             저희 결혼해요</strong>
           <div class="txt-greet aos-item" data-aos="fade-in">
             <b class="color-gr">동균,</b>
@@ -240,7 +240,7 @@
 
         <div class="ly-contents type-last">
           <strong data-aos="fade-in" class="txt-lg">
-            그럼 <span class="txt-userid txt-lg"></span>님, 
+            그럼 <span class="txt-userid txt-lg color-pi"></span>님, 
             <br>
             예식 때 만나길 바라요
             <br>
