--- a/invitation.html
+++ b/invitation.html
@@ -48,9 +48,11 @@
             저희 결혼해요</strong>
           <div class="txt-greet aos-item" data-aos="fade-in">
             <b class="color-gr">동균,</b>
-            <em>축복처럼 만난 저희의 결혼에<br>
-            축하해 주시면 감사하겠습니다,<br>
-            모든분들 께 감사드립니다</em>
+            <em>두 사람이 이제 두손을 맞잡고<br>
+            함께 나아가려 합니다<br>
+            그 길, 따듯한 눈빛과 응원으로<br/>
+            한걸음 한걸음 함께하여 주신다면<br/>
+            감사하겠습니다</em>
             <b class="mt20 color-gr">인영,</b>
             <em>저의 은퇴무대이자,<br> 데뷔무대에 함께 해주세요!<br>
             와주신다면 정말 감사하겠습니다</em>
