--- a/invitation.html
+++ b/invitation.html
@@ -49,7 +49,7 @@
           <div class="txt-greet aos-item" data-aos="fade-in">
             <b class="color-gr">동균,</b>
             <em>두 사람이 이제 두손을 맞잡고<br>
-            함께 나아가려 합니다<br>
+            한 길로 함께 나아가려 합니다<br>
             그 길, 따듯한 눈빛과 응원으로<br/>
             한걸음 한걸음 함께하여 주신다면<br/>
             감사하겠습니다</em>
