이미지 위치 확인

--- a/invitation.html
+++ b/invitation.html
@@ -176,9 +176,9 @@
                   <li>
                     <p>김성기</p>
                     <div class="txt-accountinfo">
-                      <b class="color-lgr">기업 111-11212-11123</b>
+                      <b class="color-lgr">국민 003101-04-045238</b>
                       <div class="wrap-accountnum">
-                        <textarea>111111</textarea>
+                        <textarea>00310104045238</textarea>
                         <button onclick="copy(event)">복사하기</button>
                       </div>
                     </div>
@@ -248,6 +248,7 @@
             <br>
             정말 감사드립니다
           </strong>
+          <img src="images/img_main.png">
         </div>
 
     </div>
