--- a/invitation.html
+++ b/invitation.html
@@ -61,7 +61,6 @@
         </div>
 
         <div class="ly-contents type-fm">
-          <img src="images/img_main.png" width="200">
           <ul class="list-fm">
             <li>
               <span>
@@ -80,11 +79,12 @@
               <em class="color-lgr">김동균</em>
             </li>
           </ul>
+          <img src="images/img_mid.png">
         </div>
 
         <div class="ly-contents type-gallery">
           <strong data-aos="fade-in" class="txt-lg">
-            알콩달콩 잘살겠습니다,</strong>
+            알콩달콩 달콩알콩<br/> 잘살겠습니다,</strong>
           <div class="wrap-gallery">
             <div class="list-photo" data-aos="fade-in">
               <div class="data-photo">
@@ -121,7 +121,7 @@
           장소는 이 곳 입니다</strong>
 
           <div class="wrap-map" data-aos="fade-in">
-            <img src="images/img_map_02.png">
+            <img src="images/img_map.png">
           </div>
           <div class="wrap-btn" data-aos="fade-in">
             <a class="btn-map" href="https://kko.to/jkgiLKZP-6" alt="카카오톡지도">카카오 지도</a>
@@ -248,7 +248,7 @@
             <br>
             정말 감사드립니다
           </strong>
-          <img src="images/img_main.png">
+          <img src="images/img_footer.png">
         </div>
 
     </div>
