이미지업데이트

--- a/invitation.html
+++ b/invitation.html
@@ -117,7 +117,7 @@
 
         <div class="ly-contents type-location">
           <strong data-aos="fade-in" class="txt-lg">
-            <span class="txt-userid txt-lg" data-aos="fade-in"></span>님,<br/>
+            <span class="txt-userid txt-lg color-pi" data-aos="fade-in"></span>님,<br/>
           장소는 이 곳 입니다</strong>
 
           <div class="wrap-map" data-aos="fade-in">
