--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10,user-scalable=no">
     <meta property="og:title" content="인영이와 동균이의 결혼식에 초대합니다"/>
     <meta property="og:description" content="24.02.03 PM 12:30">
+    <meta property="og:image" content="images/img-thumb.png">
     <meta property="og:type" content="website"/>
     <title>INVITATION</title>
     <link href="css/style.css" rel="stylesheet" />
