--- a/invitation.html
+++ b/invitation.html
@@ -84,23 +84,28 @@
 
         <div class="ly-contents type-gallery">
           <strong data-aos="fade-in" class="txt-lg">
-            알콩달콩 달콩알콩<br/> 잘살겠습니다,</strong>
+            <p class="color-pi">알콩달콩</p>잘살겠습니다,
+           </strong>
+
           <div class="wrap-gallery">
             <div class="list-photo" data-aos="fade-in">
               <div class="data-photo">
                 <img src="images/p2.png">
               </div>
               <div class="data-photo">
-                <img src="images/p0.png">
+                <img src="images/p1.png">
                </div>
+              <!-- <div class="data-photo">
+                <img src="images/p0.png">
+               </div> -->
               <div class="data-photo">
                 <img src="images/p4.png">
               </div>
               <div class="data-photo">
-               <img src="images/p1.png">
+                <img src="images/p3.png">
               </div>
               <div class="data-photo">
-                <img src="images/p3.png">
+                <img src="images/p5.png">
               </div>
             </div>
             <div class="arrow-g">
