하투바꾸기

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <!-- <meta content="width=device-width, initial-scale=1.0" name="viewport" /> -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0,maximum-scale=10,user-scalable=no">
-    <meta property="og:title" content="인영💙동균의 결혼식에 초대합니다"/>
+    <meta property="og:title" content="인영💛동균의 결혼식에 초대합니다"/>
     <meta property="og:description" content="24.02.03 PM 12:30">
     <meta property="og:image" content="images/img-thumb.png">
     <meta property="og:type" content="website"/>
